--- a/Videos Page/videos.html
+++ b/Videos Page/videos.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
+<link rel="stylesheet" href="style.css">
 
+<a href="index.html" style="background-color: yellow">
 
-<a href="index.html" style="background-color: yellow">HomePage</a>
+<button class="btn-1">HomePage</button>
+ 
+ </a>
 
 
 
