--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+   
+    <form method="post" action="https://github.com/clipchamsforgrayson/login-page.git">
+    
     <title>Scooter</title>
     <link rel="stylesheet" href="style.css">
 
