--- a/videos.html
+++ b/videos.html
@@ -31,7 +31,7 @@
       </style>
 
 
-<h2 style="background-color: green; text-align: center; font-size: 38px">Videos</h2>
+<h2 style="background-color: green; text-align: center; font-size: 38px; font-family: fantasy">Videos</h2>
     
     
     <div class="container">
