--- a/index.html
+++ b/index.html
@@ -31,22 +31,13 @@
       
 
 
+   <a href="videos.html" style="background-color: yellow; text-align: center">videos</a>
 
+   <a href="info.html" style="background-color: yellow; text-align: center">Info</a>
 
+<a href="movies.html" style="background-color: yellow; text-align: center">MOVIES</a>
 
-
-
-    <a href="videos.html" style="background-color: yellow">videos</a>
-
-   <a href="info.html" style="background-color: yellow">Info</a>
-
-<a href="movies.html" style="background-color: yellow">MOVIES</a>
-
-<a href="games.html" style="background-color: yellow">Games</a>
-
-
-
-
+<a href="games.html" style="background-color: yellow; text-align: center">Games</a>
 
 
 
