--- a/movies.html
+++ b/movies.html
@@ -29,7 +29,7 @@
 </body>
 
 
-<h1 style="background-color: aqua">MOVIES</h1>
+<h1 style="background-color: aqua; font-family: fantasy; font-size: 40px; text-align: center">MOVIES</h1>
 
 
 <p1 style="background-color: aqua">SHORT FILMS</p1>
