--- a/movies.html
+++ b/movies.html
@@ -32,7 +32,7 @@
 <h1 style="background-color: aqua; font-family: fantasy; font-size: 40px; text-align: center">MOVIES</h1>
 
 
-<p1 style="background-color: aqua">SHORT FILMS</p1>
+<p1 style="background-color: aqua; text-align: center; font-family: monospace">SHORT FILMS</p1>
 
 
 <div class="container">
@@ -64,7 +64,7 @@
 <div>
 
 
-<h2 style="background-color: aqua">Trailers</h2>
+<h2 style="background-color: aqua; text-align: center; font-family: monospace">Trailers</h2>
 
 <div class="container">
 
@@ -97,7 +97,6 @@
         var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
         window.kommunicate = m; m._globals = kommunicateSettings;
     })(document, window.kommunicate || {});
-/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
 </script>
 
 
