--- a/info.html
+++ b/info.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<a href="index.html" style="background-color: yellow">HomePage</a>
+<a href="index.html" style="background-color: yellow; font-family: fantasy; size: 40px;>HomePage</a>
 
 
 
