--- a/games.html
+++ b/games.html
@@ -9,7 +9,7 @@
 </head>
 
 
-<h1 style="background-color: aqua">Games</h1>
+<h1 style="background-color: aqua; text-align: center; font-family: fantasy;">Games</h1>
 
 
 
