--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
 <a href="games.html" style="background-color: yellow; text-align: center">Games</a>
 
+  <a href="proxy.html" style="background-color: yellow; text-align: center">Proxy</a>
 
 
       <h1 style="background-color: blue">Scooter</h1>
