--- a/proxy.html
+++ b/proxy.html
@@ -9,6 +9,9 @@
         <div class="chrome-tab-drag-handle" style="touch-action: none;"></div>
         <div class="chrome-tab-close"></div>
       </div>
+      
+      <a href="index.html" style="background-color: yellow; text-align: center">HomePage</a>
+      
     </div></div><div class="chrome-tabs-bottom-bar"></div><div class="chrome-tabs-newtab-btn" style="left: 249px;"><div title="New tab"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill-rule="evenodd" class="browser-bar-btn browser-bar-btn-enabled" viewBox="0 0 24 24"><path stroke-width="0px" stroke-linecap="round" shape-rendering="geometricPrecision" d="M 21 13 h -8 v 8 h -3 v -8 H 2 v -3 h 8 V 2 h 3 v 8 h 8 Z"></path></svg></div></div><style>
           .chrome-tabs[data-chrome-tabs-instance-id="0"] .chrome-tab:nth-child(1) {
             transform: translate3d(0px, 0, 0)
