--- a/info.html
+++ b/info.html
@@ -4,6 +4,7 @@
 <title>Scooter.Info</title>
 
 <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4qReYTsUc25fZhxVSdXRhkMSODCUqJBSpSRHOXopn4U9F_73sSJaOiE0Iet7rATIzwMw:https://cdn3.iconfinder.com/data/icons/pixel-social-media-2/16/Youtube-512.png&usqp=CAU"/>
+    <link rel="stylesheet" href="style.css">
 
 
 </head>
